:construction: Animate state, fixing transition bug on mobile 🥓

--- a/style.css
+++ b/style.css
@@ -21,8 +21,12 @@ h1 {
 
 /* Body */
 
-body {
+body,html {
   margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
 }
 
 img {
@@ -138,8 +142,8 @@ img {
 }
 
 .dropped-true {
-  animation-name: dropped-true;
-  animation-duration: .75s;
+  animation: dropped-true .75s, after-dropped-true .25s .75s;
+  transform: translate(-50%, -50%) scale(1.7);
 }
 
 @keyframes dropped-true {
@@ -154,9 +158,18 @@ img {
   }
 }
 
+@keyframes after-dropped-true {
+  0% {
+    transform: translate(-50%, -50%) scale(1.53);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1.7);
+  }
+}
+
 .target-true {
-  animation-name: target-true;
-  animation-duration: .75s;
+  animation: target-true .75s, after-target-true .25s .75s;
+  z-index: 3;
 }
 
 @keyframes target-true {
@@ -171,8 +184,54 @@ img {
   }
 }
 
+@keyframes after-target-true {
+  0% {
+    transform: translate(-50%, -50%) scale(1.6);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1.3);
+  }
+}
+
 .activated {
   background-color: #29e;
+}
+
+.firework {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0);
+  z-index: 2;
+}
+
+.firework-animate {
+  animation: firework-animate .75s, after-firework-animate .25s .75s;
+  /* opacity: 1;
+  transform: translate(-50%, -50%) scale(1.2); */
+}
+
+@keyframes firework-animate {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.2);
+  }
+}
+
+@keyframes after-firework-animate {
+  0% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.2);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+  }
 }
 
 /* Footer */
